Fix CSS alignment in fb2.css for index2.html

--- a/fb2.css
+++ b/fb2.css
@@ -53,7 +53,7 @@ hr{
 
 .fname
 {
-    width: 170px;
+    width: 168px;
     height: 16px;
     font-size: 15px;
     font-family: SFProDisplay-Bold, Helvetica, Arial, sans-serif;
